# Autoplane

./: .gitignore  .gitmodules  Readme.md
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/hardware/: index.doctree
docs/.doctrees/hardware/aerodynamics/: index.doctree
docs/.doctrees/hardware/equipments_configuration/: index.doctree
docs/.doctrees/software/: index.doctree
docs/.doctrees/software/architecture/: index.doctree
docs/.doctrees/software/build_process/: index.doctree
docs/.doctrees/software/documentation/: index.doctree
docs/_sources/hardware/: index.rst.txt
docs/_sources/hardware/aerodynamics/: index.rst.txt
docs/_sources/hardware/equipments_configuration/: index.rst.txt
docs/_sources/software/architecture/: index.rst.txt
docs/_static/css/: custom.css
docs/hardware/: index.html
docs/hardware/aerodynamics/: index.html
docs/hardware/equipments_configuration/: index.html
docs/hardware/equipments_configuration/cloud_server/: index.html
docs/hardware/equipments_configuration/imu/: index.html
docs/hardware/equipments_configuration/raspberry_pi/: index.html
docs/hardware/equipments_configuration/user_pc/: index.html
docs/software/: index.html
docs/software/architecture/: index.html
docs/software/build_process/: index.html
docs/software/documentation/: index.html
docs/source/: index.rst
docs/source/hardware/equipments_configuration/: index.rst
docs_src/: build.sh  index.rst
docs_src/hardware/: index.rst
docs_src/hardware/equipments_configuration/: index.rst
docs_src/hardware/equipments_configuration/raspberry_pi/: index.rst
docs_src/software/: index.rst
docs_src/software/architecture/: architecture.drawio
docs_src/software/build_process/: index.rst
docs_src/software/documentation/: index.rst
documentation/: conf.py
documentation/hardware/aerodynamics/: index.rst
documentation/hardware/equipments_configuration/raspberry_pi/: index.rst
documentation/software/: architecture.drawio  index.rst
documentation/source/: conf.py
hardware/: References.md  electronics.drawio
hardware/CFD/: results.md
hardware/CFD/SimFlow-Workspace/: .sfworkspace
software/: Readme.md  build.sh
software/autoplane-hmi/: angular.json  package-lock.json  package.json
software/autoplane-hmi/autoplane_hmi_lib/: Cargo.toml
software/autoplane-hmi/old/: index.html
software/autoplane-hmi/src/: index.html  styles.css
software/autoplane-hmi/src-tauri/: Cargo.toml  tauri.conf.json
software/autoplane-hmi/src-tauri/src/: backend.rs  main.rs
software/autoplane-hmi/src-tauri/src/events/: mod.rs
software/autoplane-hmi/src-tauri/src/events/backend_events/: attitude.rs
software/deploy/: docker-compose.yaml
software/docker/: Dockerfile  DockerfileBuild  DockerfileBuildDoc  DockerfileBuildHmi  DockerfileBuildRos  DockerfileRun  docker-compose.yaml  entrypoint.sh
software/docker/assets/: install_angular.sh  install_npm.sh  install_ros.sh  install_ros_rust.sh  install_rust.sh  install_sphinx.sh  install_tauri.sh
software/documentation/: architecture.drawio
software/ros_ws/log/: latest_build
software/ros_ws/src/autopilot/: CMakeLists.txt  package.xml
software/ros_ws/src/autopilot/launch/: launch.xml
software/ros_ws/src/autopilot/src/: Autopilot.h  DataBuffer.h
software/ros_ws/src/autopilot/src/modes/: TakeOfMode.h
software/ros_ws/src/autoplane_lib/: CMakeLists.txt  package.xml
software/ros_ws/src/autoplane_lib/include/autoplane_lib/: SerialPort.h  Utils.h
software/ros_ws/src/autoplane_lib/src/: SerialPort.cpp
software/ros_ws/src/controller/: CMakeLists.txt
software/ros_ws/src/controller/include/controller/: Controller.h  Pid.h  PolyFilter.h
software/ros_ws/src/controller/launch/: launch.xml
software/ros_ws/src/controller/src/: main.cpp
software/ros_ws/src/gps_driver/: CMakeLists.txt  package.xml
software/ros_ws/src/gps_driver/launch/: launch.xml
software/ros_ws/src/gps_driver/src/: GpsDriver.cpp  GpsDriver.h  main.cpp
software/ros_ws/src/hmi_bridge/: CMakeLists.txt  Cargo.toml  Readme.md  package.xml
software/ros_ws/src/hmi_bridge/documentation/: archi.drawio
software/ros_ws/src/hmi_bridge/launch/: launch.xml
software/ros_ws/src/hmi_bridge/src/: Bridge.cpp  Bridge.h  Structs.h  hmi_bridge.rs  main.cpp  main.rs
software/ros_ws/src/hmi_bridge/src/conversions/: RcInputs.h  State.h
software/ros_ws/src/imu_driver/: CMakeLists.txt  Readme.md  package.xml
software/ros_ws/src/imu_driver/launch/: launch.xml
software/ros_ws/src/imu_driver/src/: ImuDriver.cpp  ImuDriver.h  SerialPort.cpp  SerialPort.h  main.cpp
(+94 files in other folders)
